objects/S_P_Internal_Legal_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Address_City__c</fullName>
        <label>Billing Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Country__c</fullName>
        <label>Billing Address Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_State__c</fullName>
        <label>Billing Address State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Street__c</fullName>
        <label>Billing Address Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Zip_Postal_Code__c</fullName>
        <label>Billing Address Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Details__c</fullName>
        <label>License Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S_P_Entity_Short_Name__c</fullName>
        <label>S&amp;P Entity Short Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>S&amp;P Internal Legal Entity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>S&amp;P Internal Legal Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S&amp;P Internal Legal Entity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>